--- a/.env
+++ b/.env
@@ -40,5 +40,12 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
+
+###> symfony/sendinblue-mailer ###
+# MAILER_DSN=sendinblue+api://KEY@default
+# MAILER_DSN=sendinblue+smtp://USERNAME:PASSWORD@default
+###< symfony/sendinblue-mailer ###
+
+MAILER_EMAIL_FROM=noreply@marshal.local
