Personnalisation pour Planète-Croisière

--- a/.env
+++ b/.env
@@ -49,3 +49,7 @@ MAILER_DSN=smtp://localhost:1025
 ###< symfony/sendinblue-mailer ###
 
 MAILER_EMAIL_FROM=noreply@marshal.local
+
+CATALOG_URL=https://127.0.0.1:8002
+ERP_URL=https://127.0.0.1:8003
+FRONTOFFICE_URL=https://127.0.0.1:8001
