--- a/.env
+++ b/.env
@@ -53,3 +53,6 @@ MAILER_EMAIL_FROM=noreply@marshal.local
 CATALOG_URL=https://127.0.0.1:8002
 ERP_URL=https://127.0.0.1:8003
 FRONTOFFICE_URL=https://127.0.0.1:8001
+
+BUGSNAG_API_KEY="a7580675381f4814a902fdc19b71b630" # preprod
+#BUGSNAG_API_KEY="bd1cc052d771fb687f10c7eb37c5177f" # prod
