--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,13 @@ version: '3'
 services:
 ###> doctrine/doctrine-bundle ###
   database:
-    image: postgres:${POSTGRES_VERSION:-14}-alpine
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-app}
-      # You should definitely change the password in production
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-!ChangeMe!}
-      POSTGRES_USER: ${POSTGRES_USER:-app}
-    volumes:
-      - db-data:/var/lib/postgresql/data:rw
-      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
+      image: mysql:8.0
+      command: --default-authentication-plugin=mysql_native_password
+      environment:
+          MYSQL_ROOT_PASSWORD: "!ChangeMe!"
+          MYSQL_DATABASE: app
+      volumes:
+          - db-data:/var/lib/mysql:rw
 ###< doctrine/doctrine-bundle ###
 
 volumes:
