--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,6 +42,10 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/(login|installation), roles: PUBLIC_ACCESS }
         # - { path: ^/profile, roles: ROLE_USER }
+    
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
 when@test:
     security:
