feat: upgrade from fastfony/fastfony

--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,11 @@ yarn-error.log
 
 src/Controller/Test.php
 templates/test.html.twig
+assets/vue/controllers/Test.vue
 *babeledit.metadata.babel
 
 ###> vincentlanglet/twig-cs-fixer ###
 /.twig-cs-fixer.cache
 ###< vincentlanglet/twig-cs-fixer ###
 .php-cs-fixer.cache
+.task/
