--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,6 +4,9 @@ twig:
         company_name: '%env(database:COMPANY_NAME)%'
         company_icon_filepath: '%env(database:COMPANY_ICON_FILEPATH)%'
         background_login_image_url: '%env(database:BACKGROUND_LOGIN_IMAGE_URL)%'
+        registration_enabled: '%env(default:default_registration_enabled:bool:database:REGISTRATION_ENABLED)%'
+    form_themes:
+        - 'form/custom_types.html.twig'
 
 when@test:
     twig:
