--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,7 +41,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/(login|installation), roles: PUBLIC_ACCESS }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/, roles: PUBLIC_ACCESS }
     
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
