--- a/config/packages/stof_doctrine_extensions.yaml
+++ b/config/packages/stof_doctrine_extensions.yaml
@@ -5,3 +5,6 @@ stof_doctrine_extensions:
     orm:
         default:
             timestampable: true
+            blameable: true
+            loggable: true
+            sluggable: true
