--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     default_company_name: 'Fastfony'
+    default_registration_enabled: true
 
 services:
     # default configuration for services in *this* file
@@ -13,6 +14,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
             $companyName: '%env(default:default_company_name:database:COMPANY_NAME)%'
+            $registrationEnabled: '%env(default:default_registration_enabled:bool:database:REGISTRATION_ENABLED)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
