--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "@tailwindcss/typography": "^0.5.16",
         "@vue/compiler-sfc": "^3.5.13",
         "core-js": "^3.38.0",
-        "daisyui": "^5.0.0-beta.6",
+        "daisyui": "^5.0.0",
         "file-loader": "^6.2.0",
         "regenerator-runtime": "^0.13.9",
         "vue": "^3.5.13",
