--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -27,7 +27,7 @@ doctrine:
             gedmo_loggable:
                 type: attribute
                 prefix: Gedmo\Loggable\Entity
-                dir: "%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Loggable/Entity"
+                dir: '%kernel.project_dir%/vendor/gedmo/doctrine-extensions/src/Loggable/Entity'
                 alias: GedmoLoggable
                 is_bundle: false
         controller_resolver:
