--- a/package.json
+++ b/package.json
@@ -1,56 +1,66 @@
 {
-    "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
-        "@hotwired/stimulus": "^3.0.0",
-        "@hotwired/turbo": "^7.1.1 || ^8.0",
-        "@symfony/stimulus-bridge": "^3.2.0",
-        "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
-        "@symfony/ux-vue": "file:vendor/symfony/ux-vue/assets",
-        "@symfony/webpack-encore": "^5.0.0",
-        "@tailwindcss/typography": "^0.5.16",
-        "@vue/compiler-sfc": "^3.5.13",
-        "core-js": "^3.38.0",
-        "daisyui": "^5.0.0",
-        "file-loader": "^6.2.0",
-        "regenerator-runtime": "^0.13.9",
-        "vue": "^3.5.13",
-        "vue-loader": "^17.4.2",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^5.1.0",
-        "webpack-dev-server": "^5.2.0",
-        "webpack-notifier": "^1.15.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
-    "dependencies": {
-        "@editorjs/code": "^2.9.3",
-        "@editorjs/delimiter": "^1.4.2",
-        "@editorjs/editorjs": "^2.30.8",
-        "@editorjs/embed": "^2.7.6",
-        "@editorjs/header": "^2.8.8",
-        "@editorjs/inline-code": "^1.5.1",
-        "@editorjs/list": "^2.0.4",
-        "@editorjs/paragraph": "^2.11.7",
-        "@editorjs/quote": "^2.7.6",
-        "@editorjs/raw": "^2.5.1",
-        "@editorjs/simple-image": "^1.6.0",
-        "@editorjs/table": "^2.4.3",
-        "@editorjs/underline": "^1.2.1",
-        "@headlessui/vue": "^1.7.23",
-        "@heroicons/vue": "^2.2.0",
-        "@tailwindcss/postcss": "^4.0.4",
-        "axios": "^1.7.9",
-        "postcss": "^8.5.1",
-        "postcss-loader": "^8.1.1",
-        "table": "^6.9.0",
-        "tailwindcss": "^4.0.4",
-        "vue-i18n": "^11.1.1"
-    }
+  "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/preset-env": "^7.16.0",
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/turbo": "^7.1.1 || ^8.0",
+    "@symfony/stimulus-bridge": "^3.2.0",
+    "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
+    "@symfony/ux-vue": "file:vendor/symfony/ux-vue/assets",
+    "@symfony/webpack-encore": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@vue/compiler-sfc": "^3.5.13",
+    "core-js": "^3.38.0",
+    "daisyui": "^5.0.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-vue": "^9.32.0",
+    "file-loader": "^6.2.0",
+    "globals": "^16.0.0",
+    "prettier": "3.5.2",
+    "regenerator-runtime": "^0.13.9",
+    "vue": "^3.5.13",
+    "vue-loader": "^17.4.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-notifier": "^1.15.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress",
+    "lint": "eslint . --fix",
+    "format": "prettier .  --write"
+  },
+  "dependencies": {
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/list": "^2.0.4",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
+    "@editorjs/simple-image": "^1.6.0",
+    "@editorjs/table": "^2.4.3",
+    "@editorjs/underline": "^1.2.1",
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/postcss": "^4.0.4",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "axios": "^1.7.9",
+    "pinia": "^3.0.1",
+    "postcss": "^8.5.1",
+    "postcss-loader": "^8.1.1",
+    "table": "^6.9.0",
+    "tailwindcss": "^4.0.4",
+    "vue-i18n": "^11.1.1",
+    "vue-toastification": "^2.0.0-rc.5"
+  }
 }
