feat: OAuth2 server and user management login form & reset password (#13)

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ assets/vue/controllers/Test.vue
 ###< vincentlanglet/twig-cs-fixer ###
 .php-cs-fixer.cache
 .task/
+
+###> league/oauth2-server-bundle ###
+/config/jwt/*.pem
+###< league/oauth2-server-bundle ###
