--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -11,6 +11,14 @@ tasks:
             - symfony console doctrine:schema:create --env=dev
             - symfony console doctrine:fixtures:load --no-interaction --env=dev
 
+    oauth2-server-init:
+        desc: Generate private and public keys for OAuth2 Server
+        cmds:
+            - mkdir -p config/jwt
+            - openssl genrsa -out config/jwt/private.pem 2048
+            - openssl rsa -in config/jwt/private.pem -pubout -out config/jwt/public.pem
+            - php -r 'echo "OAUTH_ENCRYPTION_KEY=".base64_encode(random_bytes(32)), PHP_EOL;' >> .env.local
+
     vendor:
         cmds:
             - composer install
