--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -7,6 +7,7 @@ twig:
         registration_enabled: '%env(default:default_registration_enabled:bool:database:REGISTRATION_ENABLED)%'
     form_themes:
         - 'form/custom_types.html.twig'
+        - 'form/custom_errors.html.twig'
 
 when@test:
     twig:
