--- a/.env
+++ b/.env
@@ -44,3 +44,10 @@ MAILER_DSN=smtp://localhost:1025
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> league/oauth2-server-bundle ###
+OAUTH_PRIVATE_KEY=%kernel.project_dir%/config/jwt/private.pem
+OAUTH_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+OAUTH_PASSPHRASE=
+OAUTH_ENCRYPTION_KEY=
+###< league/oauth2-server-bundle ###
