--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-pdo_sqlite": "*",
+        "ext-openssl": "*",
         "api-platform/doctrine-orm": "^4.1.0",
         "api-platform/symfony": "^4.1.0",
         "doctrine/dbal": "^3.9.4",
@@ -18,6 +19,7 @@
         "easycorp/easyadmin-bundle": "^4.24.4",
         "edd-g/editorjs-simple-html-parser": "^1.3.5",
         "league/commonmark": "^2.6.1",
+        "league/oauth2-server-bundle": "^0.9.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.1.0",
