--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,7 @@ services:
         bind:
             $companyName: '%env(default:default_company_name:database:COMPANY_NAME)%'
             $registrationEnabled: '%env(default:default_registration_enabled:bool:database:REGISTRATION_ENABLED)%'
+            $mailerSender: '%env(database:MAILER_SENDER)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -25,5 +26,6 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Controller\Security\OAuthServer\Jwks:
+        arguments:
+            $oauthServerPublicKeyPath: '%env(OAUTH_PUBLIC_KEY)%'
