feat: flysystem for storage local or s3

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -16,4 +16,4 @@ api_platform:
         flow: 'authorizationCode'
         tokenUrl: '/token'
         authorizationUrl: '/authorize'
-        scopes: ['email']
+        scopes: {email: 'email'}
