--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,6 +12,9 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        api_token:
+            pattern: ^/token$
+            security: false
         api:
             pattern: ^\/api\/(?!internal\/|docs$).*
             security: true
@@ -34,7 +37,7 @@ security:
             entry_point: App\Security\AuthenticationEntryPoint
             remember_me:
                 always_remember_me: true
-                signature_properties: ['id', 'email']
+                signature_properties: ['id', 'email', 'password']
             switch_user: true
             login_throttling:
                 max_attempts: 3
@@ -55,11 +58,9 @@ security:
     access_control:
         - { path: ^/installation, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/(login|installation), roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: ROLE_API }
-        - {
-              path: ^/(login$|request-login-link$|forgot-password$|register$|reset-password),
-              roles: PUBLIC_ACCESS,
-          }
+        - { path: ^/(login$|request-login-link$|forgot-password$|register$|reset-password), roles: PUBLIC_ACCESS }
         - { path: ^/(token$|.well-known/jwks.json), roles: PUBLIC_ACCESS }
         - { path: ^/authorize, roles: IS_AUTHENTICATED_REMEMBERED }
         - { path: ^/, roles: PUBLIC_ACCESS }
