--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,13 +1,15 @@
 vich_uploader:
     db_driver: orm
+    storage: flysystem
+    use_flysystem_to_resolve_uri: true
 
     metadata:
         type: attribute
 
     mappings:
         profile_photo:
-            uri_prefix: /uploads/profiles/photos
-            upload_destination: '%kernel.project_dir%/public/uploads/profiles/photos'
+            uri_prefix: '/uploads/profiles/photos'
+            upload_destination: profile_photo.storage
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
             
             inject_on_load: false
