--- a/.env
+++ b/.env
@@ -51,3 +51,8 @@ OAUTH_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 OAUTH_PASSPHRASE=
 OAUTH_ENCRYPTION_KEY=
 ###< league/oauth2-server-bundle ###
+
+AWS_S3_BUCKET_NAME=
+AWS_S3_REGION=
+AWS_S3_ACCESS_ID=
+AWS_S3_ACCESS_SECRET=
