--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "ext-pdo_sqlite": "*",
         "api-platform/doctrine-orm": "^4.1.0",
         "api-platform/symfony": "^4.1.0",
+        "aws/aws-sdk-php": "^3.342",
         "doctrine/dbal": "^3.9.4",
         "doctrine/doctrine-bundle": "^2.13.2",
         "doctrine/doctrine-fixtures-bundle": "^4.0",
@@ -19,6 +20,9 @@
         "easycorp/easyadmin-bundle": "^4.24.4",
         "edd-g/editorjs-simple-html-parser": "^1.3.5",
         "league/commonmark": "^2.6.1",
+        "league/flysystem-aws-s3-v3": "^3.29",
+        "league/flysystem-bundle": "^3.4",
+        "league/flysystem-local": "^3.29",
         "league/oauth2-server-bundle": "^0.9.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.1",
