--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,4 +28,13 @@ services:
 
     App\Controller\Security\OAuthServer\Jwks:
         arguments:
-            $oauthServerPublicKeyPath: '%env(OAUTH_PUBLIC_KEY)%'
+            $oauthServerPublicKeyPath: '%env(resolve:OAUTH_PUBLIC_KEY)%'
+
+    Aws\S3\S3Client:
+        arguments:
+            -
+                version: 'latest' # or 'latest'
+                region: '%env(AWS_S3_REGION)%' # 'eu-central-1' for example
+                credentials:
+                    key: '%env(AWS_S3_ACCESS_ID)%'
+                    secret: '%env(AWS_S3_ACCESS_SECRET)%'
