fix: oauth2 authorization code connection and profile photo in api

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -16,4 +16,4 @@ api_platform:
         flow: 'authorizationCode'
         tokenUrl: '/token'
         authorizationUrl: '/authorize'
-        scopes: {email: 'email'}
+        scopes: {email: 'email', roles: 'roles', profile: 'profile'}
