--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,12 @@
         "doctrine/orm": "^3.3.2",
         "easycorp/easyadmin-bundle": "^4.24.4",
         "edd-g/editorjs-simple-html-parser": "^1.3.5",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/commonmark": "^2.6.1",
         "league/flysystem-aws-s3-v3": "^3.29",
         "league/flysystem-bundle": "^3.4",
         "league/flysystem-local": "^3.29",
+        "league/oauth2-github": "^3.1",
         "league/oauth2-server-bundle": "^0.9.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.1",
