--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -5,3 +5,8 @@ knpu_oauth2_client:
             client_id: '%env(database:GITHUB_CLIENT_ID)%'
             client_secret: '%env(database:GITHUB_CLIENT_SECRET)%'
             redirect_route: connect_github_check
+        google:
+            type: google
+            client_id: '%env(database:GOOGLE_CLIENT_ID)%'
+            client_secret: '%env(database:GOOGLE_CLIENT_SECRET)%'
+            redirect_route: connect_google_check
