--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,9 +32,8 @@ services:
 
     Aws\S3\S3Client:
         arguments:
-            -
-                version: 'latest' # or 'latest'
-                region: '%env(AWS_S3_REGION)%' # 'eu-central-1' for example
-                credentials:
-                    key: '%env(AWS_S3_ACCESS_ID)%'
-                    secret: '%env(AWS_S3_ACCESS_SECRET)%'
+            - version: 'latest' # or 'latest'
+              region: '%env(AWS_S3_REGION)%' # 'eu-central-1' for example
+              credentials:
+                  key: '%env(AWS_S3_ACCESS_ID)%'
+                  secret: '%env(AWS_S3_ACCESS_SECRET)%'
