build: env for locale

--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@
 APP_ENV=dev
 APP_SECRET=
 ###< symfony/framework-bundle ###
+APP_LOCALE=fr
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
