--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,6 +38,7 @@ security:
             remember_me:
                 always_remember_me: true
                 signature_properties: ['id', 'email', 'password']
+                lifetime: 31449600 # 1 year in seconds
             switch_user: true
             login_throttling:
                 max_attempts: 3
